[package]
name = "sheepitmd"
version = "0.1.0"
edition = "2024"

[dependencies]
nvml-wrapper = "0.11.0"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "process",
] }
axum = "0.8.7"
serde_json = "1.0.145"
reqwest = { version = "0.12.25", features = ["json"] }
once_cell = "1.21.3"
